# bases

./: CONTRIBUTING.md  README.md  README.rst  SECURITY.md  _setup.py  make-docs.bat  pypi-distrib-upload.bat  run-tests.bat  setup.cfg  setup.py  tox.ini
.github/workflows/: python-pytest.yml
bases/: __init__.py  random.py
bases/alphabet/: __init__.py  abstract.py  range_alphabet.py  string_alphabet.py
bases/encoding/: __init__.py  base.py  block.py  errors.py  fixchar.py  simple.py  zeropad.py
docs/: alphabet.rst  api-toc.rst  conf.py  encoding.rst  getting-started.rst  index.html  index.rst  make-api.json  make-api.py  random.rst  requirements.txt
docs/api/: bases.alphabet.abstract.rst  bases.alphabet.range_alphabet.rst  bases.alphabet.rst  bases.alphabet.string_alphabet.rst  bases.encoding.base.rst  bases.encoding.block.rst  bases.encoding.errors.rst  bases.encoding.fixchar.rst  bases.encoding.rst  bases.encoding.simple.rst  bases.encoding.zeropad.rst  bases.random.rst  bases.rst
docs/bases/: index.html  random.html
docs/bases/alphabet/: abstract.html  index.html  range_alphabet.html  string_alphabet.html
docs/bases/encoding/: base.html  block.html  errors.html  fixchar.html  fixed_char.html  index.html  simple.html  zero_padded.html  zeropad.html
test/: test_00_encode_decode.py  test_01_decode_encode.py  test_02_variations.py  test_03_test_vectors_basic.py  test_04_test_vectors_case_insensitivity.py  test_05_test_vectors_leading_zeros.py  test_06_base58.py  test_07_base45.py
